# marketsurge-rs

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  build.rs  cliff.toml  dist-workspace.toml  release-plz.toml
.github/workflows/: audit.yml  ci.yml  release.yml
agent/: AGENTS.md  CHANGELOG.md  Cargo.toml
agent/src/: cli.rs  lib.rs  main.rs  output.rs
agent/src/commands/: adhoc_screen.rs  chart.rs  fundamentals.rs  industry.rs  market_data.rs  markups.rs  mod.rs  ownership.rs  ratings.rs  screen.rs  tree.rs  watchlist.rs
agent/src/common/: auth.rs  command.rs  mod.rs  rows.rs  test_support.rs
client/: AGENTS.md  CHANGELOG.md  Cargo.toml
client/src/: adhoc_screen.rs  auth.rs  browser_auth.rs  chart.rs  client.rs  coach.rs  error.rs  fundamentals.rs  graphql.rs  industry.rs  lib.rs  market_data.rs  markups.rs  nav.rs  ownership.rs  ratings.rs  screen.rs  test_support.rs  types.rs  watchlist.rs
client/src/graphql/: chart_market_data.graphql  chart_market_data_weekly.graphql  market_data_adhoc_screen.graphql
client/testdata/ChartMarketData/: request.json
client/testdata/ChartMarketDataWeekly/: request.json  response.json
client/testdata/CoachTree/: request.json
client/testdata/FetchChartMarkups/: request.json  response.json
client/testdata/FlaggedSymbols/: request.json  response.json
client/testdata/IndustryGroupRS/: request.json  response.json
client/testdata/IndustryOverview/: response.json
client/testdata/MarketDataAdhocScreen/: response.json
client/testdata/MarketDataScreen/: response.json
client/testdata/NavTree/: response.json
client/testdata/OtherMarketDataMixedShape/: response.json
client/testdata/Ownership/: request.json
client/testdata/RSRatingRIPanel/: request.json  response.json
client/testdata/RunScreen/: request.json
client/testdata/Screen/: request.json
client/testdata/Screens/: request.json
src/: adhoc_screen.rs  auth.rs  browser_auth.rs  chart.rs  fundamentals.rs  industry.rs  lib.rs  main.rs  ownership.rs  screen.rs  test_support.rs  types.rs  watchlist.rs
src/cli/: args.rs  logging.rs  mod.rs  output.rs
src/graphql/: chart_market_data.graphql  flagged_symbols.graphql  industry_group_rs.graphql  industry_overview.graphql  market_data_screen.graphql  nav_tree.graphql  rs_rating_ri_panel.graphql  screen.graphql  screener_watchlist.graphql  screens.graphql
testdata/ChartMarketData/: request.json  response.json
testdata/ChartMarketDataWeekly/: request.json
testdata/CoachTree/: response.json
testdata/FlaggedSymbols/: request.json  response.json
testdata/FundermentalDataBox/: request.json  response.json
testdata/GetAllWatchlistNames/: request.json  response.json
testdata/NavTree/: request.json
tests/: cli_diagnostics.rs  cli_exit_codes.rs  cli_help.rs
(+42 files in other folders)
