[package]
name = "marketsurge-agent"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
description = "Unofficial agent-oriented CLI for MarketSurge data"
license = "Apache-2.0"
repository = "https://github.com/major/marketsurge-rs"
readme = "../README.md"

[[bin]]
name = "marketsurge-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
marketsurge-client = { version = "0.1.0", path = "../client" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
