[package]
name = "marketsurge-client"
version = "0.1.1"
edition = "2024"
rust-version = "1.95.0"
description = "Unofficial HTTP client library for the MarketSurge platform"
license = "Apache-2.0"
repository = "https://github.com/major/marketsurge-rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["cookies", "json"] }
rookie = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
url = "2"

[dev-dependencies]
mockito = "=1.7.2"
tokio = { version = "=1.52.3", features = ["full", "test-util"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
